--- a/assets/style.css
+++ b/assets/style.css
@@ -147,7 +147,9 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 2.5em;
+	line-height: 1.2;
+	margin-bottom: 0.5rem;
 }
 .quote__author {
 	font-family: Spectral;
