--- a/assets/style.css
+++ b/assets/style.css
@@ -300,6 +300,11 @@ input[type="submit"] {
 		text-align: center;
 		margin-top: 1em;
 	}
+	.about-me__introduction {
+		width: 100%;
+		
+	}
+
 	#services .container {
 		flex-direction: column;
 	}
