clean up style files

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
 	max-width: 1920px;
-	margin: auto;
+	margin: 0 auto;
 }
 
 * {
@@ -9,7 +9,7 @@ body {
 }
 
 img{
-	width: 100%;
+	width:100%;
 	height: 100%;
 	object-fit: cover;
 }
@@ -226,14 +226,16 @@ span.nav-link.active.active-tag {
 	z-index: -1;
 }
 .form-container {
-	flex : 2;
-
+	flex : 1.5;
 }
 form {
 	display: flex;
 	flex-direction: column;
-	width: 70%;
+	width: 75%;
 	align-items: flex-start;
+}
+.form-container__title{
+	width: 100%;
 }
 
 form input {
@@ -257,11 +259,16 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+@media all and (max-width: 1440px){
+	.form-container__title{
+		width: 75%;
+	}
 
+}
 
 @media all and (max-width: 1180px) {
 	.picture {
-		flex : 2;
+		flex : 1.5;
 	}
 	.picture.left{
 	max-width: 45%;
@@ -276,13 +283,21 @@ input[type="submit"] {
 	#about-me h6, #about-me p {
 		width: 100%;
 	}
+	form {
+	width:90%;
+	}
+	.form-container__title{
+		width: 90%;
+	}
 }
 
 
 @media all and (max-width: 1000px) {
+	.top-header{
+	padding:20px 50px;
+	}
 	#about{
 		flex-direction: column;
-
 	}
 	.picture {
 		width: 50%;
@@ -329,6 +344,7 @@ input[type="submit"] {
 
 	#contact .container {
 		flex-direction: column;
+		width:100%;
 	}
 	#contact .picture.right {
 		margin-top: 1em;
@@ -341,12 +357,19 @@ input[type="submit"] {
 		right: 0;
 		z-index: -1;
 	}
+	.form-container__title{
+		width: 100%;
+	}
+	form {
+		width:100%;
+		}
 }
 
 @media all and (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
 		padding-inline: 0;
+
 	}
 	.top-header .nav, .top-header .nav ul {
 		width: 100%;
@@ -369,11 +392,5 @@ input[type="submit"] {
 	#about, #contact {
 		padding-inline: 2em;
 		padding-block: 2em;
-	}
-	form {
-		width: 100%;
-	}
-	.picture {
-		width: 80%;
 	}
 }
